--- a/src/app/mealtype/mealtype.component.css
+++ b/src/app/mealtype/mealtype.component.css
@@ -1,5 +1,5 @@
 .eat-today{
-    background: white url("src/app/images/hero.jpg") center / cover;
+    background: white url("images/hero.jpg") center / cover;
 }
 
 .is-camo{
